# amethyst-dd-clone

./: .gitmodules  Cargo.toml
resources/: input_bindings.ron
resources/levels/: levels.yaml
resources/sprites/: dirtgrass.ron
src/: level.rs  main.rs  state.rs
src/component/: mod.rs  player.rs
src/events/: mod.rs
src/states/: game.rs  loading.rs  mod.rs
src/system/: mod.rs  moving.rs  player.rs
