[package]
name = "dd"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "master", features = ["tiles",] }
# amethyst = { version = "0.13.2", features = ["tiles",] }
amethyst-imgui = { git = "https://github.com/amethyst/amethyst-imgui", features = ["shader-compiler"] }
# amethyst-imgui = { version = "0.5.2", features = ["shader-compiler"] }
amethyst-inspector = { git = "https://github.com/Awpteamoose/amethyst-inspector" }
chrono = "*"
derivative = "*"
itertools = "*"
imgui = {version = "0.2", features = [] }
log = { version = "0.4.8", features = ["serde"] }
minterpolate = "*"
ndarray = { version = "0.13.0", features = ["serde-1"] }
nom = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
winit = "*"

thread_profiler = { version = "0.3", optional = true }

[features]
default = ["vulkan", # "nightly",
           "json", "amethyst/no-slow-safety-checks",
           "thread_profiler/thread_profiler", "amethyst/saveload", "amethyst/renderer"]

empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

nightly = ["amethyst/nightly"]
json = ["amethyst/json"]
profiler = ["amethyst/profiler"]

inspector = []

[patch."https://github.com/Awpteamoose/amethyst-inspector"]
amethyst-inspector = { path = "../amethyst-inspector" }

[patch."https://github.com/amethyst/amethyst-imgui"]
amethyst-imgui = { path = "./amethyst-imgui" }
